# Aura-IDE

./: .coverage  .gitignore  AURA_COMPANION_SPEC.md  COMPANION_PLAN.md  README.md  SPEC.md  _acceptance_test.py  _decompile_out.txt  _diag.py  _dispatch_prompt.txt  _test_prune.py  apply_fixes.py  package.json  pyproject.toml  spec.md  test_crash.py  test_crash2.py  test_smoke.py  verify_provider_logic.py
$smoke/: config.json  node_id
.aura/: skill_outcomes.db
.github/: FUNDING.yml
.playwright-mcp/: page-2026-06-25T23-56-55-804Z.yml
aura/: __init__.py  __main__.py  ast_utils.py  cli_tools.py  config.py  dep_graph.py  dependency_context.py  focused_actions.py  fs_utils.py  git.py  git_ops.py  godot_scene_editor.py  godot_toolchain.py  handoff.py  hooks.py  key_manager.py  mcp_client.py  memory_db.py  models.py  paths.py  project_env.py  prompts.py  python_env.py  repo_map.py  resources.py  sandbox.py  self_target.py  settings.py  startup_logging.py  todo_state.py  ui_contract.py  ui_gate.py  ui_probe.py  updater.py  verify.py  version.py  vision.py  windows_app_id.py
aura.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
cloudflare-relay/: package-lock.json  package.json  wrangler.toml
companion-web/: index.html  package-lock.json  package.json
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  README.md  STRUCT.md  configuration.md  development.md  drones.md  getting-started.md  godot-asset-visual-iteration-roadmap.md  godot-editor-bridge.md  gui-event-architecture.md  index.html  mobile.md  planner-worker.md  providers.md  ruin-visual-iteration-roadmap.md  tools.md  (+2 more)
(+841 files in other folders)
