[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aura"
version = "0.1.0"
description = "Aura — desktop chat troubleshooter for code, supporting DeepSeek, OpenAI, Anthropic, Google Gemini, and OpenRouter."
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0",
    "httpx",
    "openai>=1.40",
    "pillow>=10.0",
    "platformdirs>=4.0",
    "pydantic>=2.5",
    "pygments>=2.17",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
aura = "aura.__main__:main"

[tool.setuptools.packages.find]
include = ["aura*"]
exclude = ["scripts*", "tests*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
